[package]
name = "zeph-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []
qdrant = ["dep:blake3", "dep:qdrant-client", "dep:serde_json", "dep:uuid", "dep:zeph-memory"]
self-learning = []

[dependencies]
blake3 = { workspace = true, optional = true }
notify.workspace = true
notify-debouncer-mini.workspace = true
qdrant-client = { workspace = true, optional = true, features = ["serde"] }
serde_json = { workspace = true, optional = true }
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt"] }
tracing.workspace = true
uuid = { workspace = true, optional = true, features = ["v5"] }
zeph-llm.workspace = true
zeph-memory = { workspace = true, optional = true }

[dev-dependencies]
anyhow.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
