[package]
name = "zeph-skills"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[features]
default = []

[dependencies]
blake3.workspace = true
notify.workspace = true
notify-debouncer-mini.workspace = true
qdrant-client = { workspace = true, features = ["serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
futures.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tracing.workspace = true
uuid = { workspace = true, features = ["v5"] }
zeph-llm.workspace = true
zeph-memory.workspace = true

[[bench]]
name = "matcher"
harness = false

[dev-dependencies]
anyhow.workspace = true
criterion.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread", "time"] }

[lints]
workspace = true
