[package]
name = "zeph-tools"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation = "https://docs.rs/zeph-tools"
keywords.workspace = true
categories.workspace = true
description = "Tool executor trait with shell, web scrape, and composite executors for Zeph"
readme = "README.md"

[dependencies]
dirs = "6.0"
glob.workspace = true
regex.workspace = true
uuid = { workspace = true, features = ["v4"] }
reqwest = { workspace = true, features = ["rustls"] }
schemars.workspace = true
scrape-core.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["fs", "io-util", "macros", "process", "rt", "sync", "time"] }
tokio-util.workspace = true
tracing.workspace = true
url.workspace = true
zeph-skills.workspace = true

[dev-dependencies]
filetime = "0.2"
insta.workspace = true
proptest.workspace = true
tempfile.workspace = true
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
toml.workspace = true

[lints]
workspace = true
