[package]
name = "zeph-tui"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
anyhow.workspace = true
crossterm.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
thiserror.workspace = true
throbber-widgets-tui = "0.10"
tokio = { workspace = true, features = ["sync", "rt", "time"] }
tracing.workspace = true
unicode-width.workspace = true
zeph-core.workspace = true

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[lints]
workspace = true
